clusters/eldertree/infrastructure/pihole/bind-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bind
  namespace: pihole
  labels:
    app: bind
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
  - name: bind-udp
    port: 5353
    targetPort: 5353
    protocol: UDP
  - name: bind-tcp
    port: 5353
    targetPort: 5353
    protocol: TCP
